fix: navbar order button mobile responsive

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -314,6 +314,18 @@ section {
   background: rgba(206, 165, 18, 0.8);
 }
 
+@media (min-width: 300px) {
+  .header .btn-book-a-table {
+    text-align: center;
+    width: 120px;
+  }
+
+  .header .logo h1 {
+    text-align: center;
+    font-size: 24px;
+  }
+}
+
 section {
   scroll-margin-top: 90px;
 }
